5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1575_1331.log
== TEST (2019-03-12 11:55:43) 
-- CODE:
print(50 / 4)
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:08) 
-- CODE:
print(50 / 4 %)
-- ERROR:
File "XXXX", line 1
    print(50 / 4 %)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:24) 
-- CODE:
print(50 / 3 /)
-- ERROR:
File "XXXX", line 1
    print(50 / 3 /)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:16) 
-- CODE:
print(50 % 3 )
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:51) 
-- CODE:
print(50 / 3 )
print(2)
-- EXECUTION TIME:
0.238514
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:08) 
-- CODE:
print(50 / 3 )
print(2)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:37) 
-- CODE:
print(round(50 / 3, 1 )
print(2)
-- ERROR:
File "XXXX", line 2
    print(2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:54) 
-- CODE:
print(round(50 / 3 )
print(2)
-- ERROR:
File "XXXX", line 2
    print(2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:01) 
-- CODE:
print(round(50 / 3 )
print(2)
-- ERROR:
File "XXXX", line 2
    print(2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:17:12) 
-- CODE:
print(round( 50 // 3 )
print(2)
-- ERROR:
File "XXXX", line 2
    print(2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:17:31) 
-- CODE:
print(round( 50 // 3 )
print(50 % 3)
-- ERROR:
File "XXXX", line 2
    print(50 % 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:19:29) 
-- CODE:
print(round( 50 / 3 )
print(50 % 3)
-- ERROR:
File "XXXX", line 2
    print(50 % 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:31:17) 
-- CODE:
print( 50 / 3 )
print(50 % 3)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:31:27) 
-- CODE:
print( 50 / 3 )
print(50 % 3)
-- EXECUTION TIME:
0.193632
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:32:03) 
-- CODE:
print(round( 50 / 3, 2 )
print(50 % 3)
-- ERROR:
File "XXXX", line 2
    print(50 % 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:32:19) 
-- CODE:
print(round( 50 / 3, 2 ))
print(50 % 3)
-- OUTPUT:
16.67
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:32:25) 
-- CODE:
print(round( 50 / 3, 2 ))
print(50 % 3)
-- EXECUTION TIME:
0.145229
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.67
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:32:48) 
-- CODE:
print(round( 50 / 3, 0))
print(50 % 3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:32:54) 
-- CODE:
print(round( 50 / 3, 0))
print(50 % 3)
-- EXECUTION TIME:
0.189336
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
17.0
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:33:50) 
-- CODE:
print(round( 50 / 3, 0))
print(50 % 3)
-- OUTPUT:
17.0
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:36:42) 
-- CODE:
print(round( 50 / 3, ))
print(9 % 4)
-- OUTPUT:
17
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:37:05) 
-- CODE:
print(round( 50 // 3)
print( 50 % 3)
-- ERROR:
File "XXXX", line 2
    print( 50 % 3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:37:17) 
-- CODE:
print(round( 50 // 3)

-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:37:22) 
-- CODE:
print(round( 50 // 3)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:37:58) 
-- CODE:
print(round( 50 // 3))
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:38:20) 
-- CODE:
print(round( 50 // 3))
print(50 % 3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:38:23) 
-- CODE:
print(round( 50 // 3))
print(50 % 3)
-- EXECUTION TIME:
0.133503
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
